Install pandoc in the GitHub CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
             rustup update ${{ matrix.toolchain }}
             rustup default ${{ matrix.toolchain }}
           fi
+      - name: Install build dependencies
+        run: zypper --non-interactive install pandoc-cli
       - name: Build the project
         run: cargo build
       - name: Run tests
